kubernetes/apps/production/arr/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: prowlarr
    namespace: arr
    labels:
        app: prowlarr
spec:
    replicas: 1
    selector:
        matchLabels:
            app: prowlarr
    template:
        metadata:
            labels:
                app: prowlarr
        spec:
            securityContext:
                runAsUser: 65534
                runAsGroup: 65534
                fsGroup: 65534
                fsGroupChangePolicy: OnRootMismatch
            containers:
                - name: prowlarr
                  image: ghcr.io/onedr0p/prowlarr:rolling@sha256:7234ae8ca5b14153baddf42257cc2ddc928695ce604d11a9616b635eca0e43e7
                  imagePullPolicy: IfNotPresent
                  resources:
                    requests:
                        memory: 512Mi
                        cpu: 150m
                    limits:
                        memory: 2Gi
                        cpu: 500m
                  volumeMounts:
                    - mountPath: /config
                      name: prowlarr-config
            volumes:
                - name: prowlarr-config
                  persistentVolumeClaim:
                    claimName: prowlarr-config
