kubernetes/apps/production/arr/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-prowlarr
  namespace: arr
spec:
  selector:
    app: prowlarr
  ports:
    - port: 9696
      targetPort: 9696
      protocol: TCP
  type: ClusterIP
